# asynx

./: .gitignore  CMakeLists.txt  README.md
include/: asynx.h  buffer.h  common.h  config.h  event.h  thread.h  threadpool.h
src/: common.c  thread.c  threadpool.c
